# lightning-hydra-uv-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: code-quality-pr.yaml  test.yml
configs/paths/: default.yaml
src/: eval.py  train.py
src/data/: mnist_datamodule.py  utils.py
src/models/: mnist_module.py
src/utils/: __init__.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
tests/: conftest.py  test_datamodules.py
tests/helpers/: package_available.py  run_if.py
