[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightning-hydra-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "importlib-metadata>=8.6.1",
    "sh>=2.2.2",
    "torch>=2.6.0",
    "torchvision",
    "pytorch-lightning>=2.5.1",
    "torchmetrics>=0.11.4",
    "hydra-core",
    "hydra-colorlog",
    "hydra-optuna-sweeper",
    "rich",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
